--- a/makefile.in
+++ b/makefile.in
@@ -4,10 +4,14 @@ LFLAGS=@LIBS@
 MACROS=@DEFS@
 
 libmpow:
-	$(CC) $(CFLAGS) $(LFLAGS) $(MACROS) -fPIC mpow.c -shared -o libmpow.so
+	$(CC) -shared -o libmpow.so $(CFLAGS) $(LFLAGS) $(MACROS) -fPIC mpow.c
 	
 mpow:
-	$(CC) $(CFLAGS) $(LFLAGS) $(MACROS) mpow.c -o mpow
+	$(CC) -o mpow $(CFLAGS) $(LFLAGS) $(MACROS) mpow.c
 
 clean:
-	rm -f mpow libmpow.so
+	rm -rf autom4te.cache configure config.log config.status
+
+clean_all:
+	make clean
+	rm -rf mpow libmpow.so
