--- a/makefile.in
+++ b/makefile.in
@@ -4,14 +4,14 @@ LFLAGS=@LIBS@
 MACROS=@DEFS@
 
 libmpow:
-	$(CC) -shared -o libmpow.so $(CFLAGS) $(LFLAGS) $(MACROS) -fPIC mpow.c
-	
+	$(CC) $(CFLAGS) -shared -o libmpow.so -fPIC mpow.c $(LFLAGS) $(MACROS)
+
 mpow:
-	$(CC) -o mpow $(CFLAGS) $(LFLAGS) $(MACROS) mpow.c
+	$(CC) $(CFLAGS) -o mpow mpow.c $(LFLAGS) $(MACROS)
 
 clean:
 	rm -rf autom4te.cache configure config.log config.status
 
 clean_all:
 	make clean
-	rm -rf mpow libmpow.so
+	rm -rf mpow mpow.cl.bin libmpow.so
